tests/e2e/not_allowed/var.error
Error: syntax error in story at line 1, column 1

1|    var = 1
      ^^^

E0030: `var` is reserved for future use
